test/parser/block/unclosed_block.exp
Error: Unexpected <EOF>
test/parser/block/unclosed_block.myte:3:12-12
 3 | fun main() {
   |             ^